feat: add GET /posts/slug handler
